--- a/html/baster.html
+++ b/html/baster.html
@@ -86,7 +86,7 @@
                             - Uma página não folha com k páginas filhas possui k-1 chaves</p>
                     </h5>
                     <div class="card  w-75 m-auto my-5">
-                        <a href="#" class="btn btn-primary">Assista uma Demonstração</a>
+                        <a href="https://www.youtube.com/watch?v=WXnTmuSZDfc&t=223s" class="btn btn-primary">Assista uma Demonstração</a>
                     </div>
                 </div>
             </div>
