--- a/html/redblack.html
+++ b/html/redblack.html
@@ -67,7 +67,7 @@
                     assegurar que a árvore permaneça aproximadamente balanceada.
                 </p>
                 <div class="card  w-75 m-auto my-5">
-                    <a href="#" class="btn btn-primary">Assista uma Demonstração</a>
+                    <a href="https://www.youtube.com/watch?v=OkGkEu5NsCs" class="btn btn-primary">Assista uma Demonstração</a>
                 </div>
             </div>
         </div>
