--- a/html/btree.html
+++ b/html/btree.html
@@ -33,7 +33,7 @@
                         <a class="nav-link active" aria-current="page" href="../html/integrantes.html">Integrantes</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                        <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             Estruturas de Dados
                         </a>
@@ -79,7 +79,7 @@
                     Boeing, no Boeing Scientific Research Labs.
                 </p>
                 <div class="card  w-75 m-auto my-5">
-                    <a href="#" class="btn btn-primary">Assista uma Demonstração</a>
+                    <a href="https://www.youtube.com/watch?v=coRJrcIYbF4" class="btn btn-primary">Assista uma Demonstração</a>
                 </div>
             </div>
         </div>
